lx/test/fixtures/parser/invalid/continue-outside-loop.lx
// Invalid: continue outside of a loop
let x = 1
continue
let y = 2
